# Trail

./: .gitignore  CMakeLists.txt  Readme.md  build.ps1  clean.ps1  config.ps1  machine_config.ps1.exsample
include/: StepVerticalSlider.h  dft.h  gui.h  initialize_message.h  log.h  numericChangeView.h  plugcontroller.h  plugids.h  plugprocessor.h  projection.h  projectionView.h  static.h  version.h  waveview.h
resource/: background.html  plug.rc
source/: StepVerticalSlider.cpp  dft.cpp  gui.cpp  log.cpp  numericChangeView.cpp  plugcontroller.cpp  plugfactory.cpp  plugprocessor.cpp  projection.cpp  projectionView.cpp  static.cpp  waveview.cpp
